<?xml version="1.0"?>

<resources>

    <string name="app_name">WHEN</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">설정</string>

    <string name="title_activity_in_group">InGroup</string>

    <string name="title_activity_create_account">계정 생성</string>

    <string name="title_activity_create_group">그룹 생성</string>

    <string name="title_activity_invite_people">구성원 초대</string>

    <string name="title_activity_group_list">그룹 목록</string>

    <string name="copyright">Copyright ⓒ 2016 – 2016 Gachon Univ. All Rights Reserved.</string>

    <string name="email_hint">이메일</string>

    <string name="password_hint">비밀번호</string>

    <string name="create_account_hint">계정 만들기</string>

    <string name="name_hint">이름</string>

    <string name="btn_signup">회원가입</string>

    <string name="home">홈</string>

    <string name="setting">설정</string>

    <string name="rate">평가</string>

    <string name="about">정보</string>

    <string name="share">공유</string>

    <string name="group_title_hint">그룹명</string>

    <string name="btn_create_group">그룹 생성</string>

    <string name="group_add_hint">구성원 초대</string>

    <string name="name_errmsg1">이름은 반드시 1글자 이상이어야 합니다</string>

    <string name="email_errmsg1">올바른 이메일을 입력하세요</string>

    <string name="pw_errmsg1">비밀번호는 반드시 4글자 이상이어야 합니다</string>

    <string name="group_title_errmsg1">그룹명은 반드시 1글자 이상이어야 합니다</string>

    <string name="meet_title_errmsg1">일정제목은 반드시 1글자 이상이어야 합니다</string>

    <string name="desc_errmsg1"></string>

    <string name="location_errmsg1"></string>

    <string name="group_name_hint">그룹명</string>
    <string name="title_activity_group_manage">GroupManage</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_test">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login">Sign in</string>
    <string name="notifications">알림</string>
    <string name="profile">프로필</string>
    <string name="sound">소리</string>
    <string name="vibration">진동</string>
    <string name="popup">팝업</string>
    <string name="group">그룹</string>
    <string name="version_info">Version 1.00.1</string>
    <string name="developer_info">개발자 정보</string>
    <string name="title_hint">제목</string>
    <string name="group_desc_hint">그룹 설명</string>
    <string name="desc_hint">설명</string>
    <string name="location_hint">장소</string>
    <string name="meet_info">일정 정보</string>
    <string name="meet_list">일정 목록</string>
    <string name="member">구성원</string>
    <string name="create_meet">일정 생성</string>
    <string name="select_day">날짜 선택</string>
    <string name="login_fail_msg">로그인이 실패했습니다</string>
    <string name="login_progress_msg">로그인 중입니다.</string>
    <string name="YSM">양성민</string>
    <string name="JDH">조동현</string>
    <string name="JJH">지정한</string>
    <string name="ysm_email">ysm0622@gmail.com</string>
    <string name="jdh_email">ehdguso@naver.com</string>
    <string name="jjh_email">wlwjdgks123@gmail.com</string>
    <string name="search_hint">이름(초성), 이메일 검색</string>
    <string name="SUN">일</string>
    <string name="MON">월</string>
    <string name="TUE">화</string>
    <string name="WED">수</string>
    <string name="THU">목</string>
    <string name="FRI">금</string>
    <string name="SAT">토</string>
    <string name="select_all">전체선택</string>
    <string name="group_empty_msg">그룹이 없습니다.</string>
    <string name="meet_empty_msg">일정이 없습니다. 일정을 추가하세요.</string>
    <string name="logout">로그아웃</string>
    <string name="input_time">시간 입력</string>
    <string name="cancel">취소</string>
    <string name="leave">탈퇴</string>
    <string name="delete">탈퇴</string>
    <string name="Leave_the_group">그룹을 탈퇴하시겠습니까?</string>
    <string name="Leave_group_warn_msg">그룹 탈퇴시 모든 입력 기록이 삭제되며, 구성원에게 초대 받기 전까지 다시 그룹에 가입할 수 없습니다.</string>
    <string name="language">언어</string>
    <string name="korean">한국어</string>
    <string name="english">영어 (English)</string>
    <string name="rate_msg">도움이 되셨나요?</string>
    <string name="complete">완료</string>
    <string name="groupdescription_title">그룹 제목</string>
    <string name="groupdescription_description">설명</string>
    <string name="delete_account">계정 삭제</string>
    <string name="edit_profile">프로필 수정</string>
    <string name="change_pw">비밀번호 변경</string>
    <string name="state">현황</string>
    <string name="ok">확인</string>
    <string name="description">설명</string>
    <string name="date">날짜</string>
    <string name="times">시간</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="nogroup_msg">그룹이 없습니다.\n그룹을 생성해보세요!</string>
    <string name="nomeet_msg">그룹 일정이 없습니다.\n일정을 추가해보세요!</string>
    <string name="wrong_pw">비밀번호를 잘못 입력하셨습니다.</string>
    <string name="noexist_email">존재하지 않는 이메일입니다.</string>
    <string name="remove_title">계정을 삭제하시겠습니까?</string>
    <string name="remove_content">계정 삭제시 모든 입력 기록이 삭제되며, 새로운 계정을 생성 하기 전까지는 WHEN을 이용할 수 없습니다.</string>
    <string name="delete_acc_msg">계정이 삭제되었습니다.</string>
    <string name="poll_state">투표 현황</string>
    <string name="exist_email_msg">중복된 이메일입니다.</string>
    <string name="groupinfo_progress">그룹정보 불러오는 중…</string>
    <string name="creategroup_progress">그룹 생성중…</string>
    <string name="signup_progress">계정 생성중…</string>
    <string name="deletegroup_progress">그룹 삭제중…</string>
    <string name="deleteaccount_progress">계정 삭제중…</string>
    <string name="groupleave_progress">그룹 탈퇴중…</string>
    <string name="meetInfo_progress">일정정보 불러오는 중…</string>
    <string name="refresh_progress">새로고침중…</string>
    <string name="noti_on">알림 켜짐</string>
    <string name="noti_off">알림 꺼짐</string>
    <string name="changepw">비밀번호 변경</string>
    <string name="changed_pw">비밀번호가 변경되었습니다.</string>
    <string name="re_input_pw">비밀번호를 다시 확인해주세요.</string>
    <string name="restart_msg">변경된 언어는 재시작 후 적용됩니다.</string>
    <string name="createmeet_progress">일정 생성중…</string>
    <string name="saving">저장중…</string>
    <string name="hour">시</string>
    <string name="input_saving">입력 정보를 저장중…</string>
    <string name="inputtime_progress">시간 정보를 불러오는 중…</string>
    <string name="incomplete_vote_msg">투표가 완료되지 않았습니다.</string>
    <string name="recommendation_title">일정 추천</string>

</resources>