<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="290dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/remove_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/remove_title"
            android:singleLine="false"
            android:textStyle="bold"
            android:textColor="@color/textPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/remove_content"
            android:text="@string/remove_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="right|center_vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/remove_btn1"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/selector_btn"
            android:gravity="center"
            android:minWidth="64dp"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/remove_btn2"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@drawable/selector_btn"
            android:gravity="center"
            android:minWidth="64dp"
            android:padding="8dp"
            android:text="@string/leave"
            android:textColor="@color/colorAccent" />
    </LinearLayout>


</LinearLayout>