<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <LinearLayout
            android:id="@+id/TopLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/MyPhoto"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_account_circle_black_48dp" />

            <TextView
                android:id="@+id/MyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/YSM"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/MyEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ysm_email"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/BottomLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <include
                android:id="@id/Include0"
                layout="@layout/inputbox" />

            <include
                android:id="@id/Include1"
                layout="@layout/inputbox" />

            <include
                android:id="@id/Include2"
                layout="@layout/outputbox" />

            <Button
                android:id="@+id/Button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="16dp"
                android:backgroundTint="@color/red"
                android:text="@string/delete_account"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/Fab0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_photo_camera_white_24dp"
        app:layout_anchor="@+id/TopLinearLayout"
        app:layout_anchorGravity="bottom|right|end" />
</android.support.design.widget.CoordinatorLayout>