<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="2dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/LinearLayout0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/ImageView0"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="16dp"
                android:src="@drawable/ic_notifications_black_24dp" />

            <TextView
                android:id="@+id/TextView0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/notifications"
                android:textColor="@color/textPrimary"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/Switch0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey4" />

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/ImageView1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="16dp"
                android:src="@drawable/ic_volume_up_white_24dp" />

            <TextView
                android:id="@+id/TextView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/sound"
                android:textColor="@color/textPrimary"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/Switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/ImageView2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="16dp"
                android:src="@drawable/ic_vibration_white_24dp" />

            <TextView
                android:id="@+id/TextView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/vibration"
                android:textColor="@color/textPrimary"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/Switch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/ImageView3"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="16dp"
                android:src="@drawable/ic_sms_failed_white_24dp" />

            <TextView
                android:id="@+id/TextView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/popup"
                android:textColor="@color/textPrimary"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/Switch3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>